# AI-Automation-Projects

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deployment/k8s/chart/templates/: api.yaml  configmap.yaml  secret.yaml
deployment/standalone/: eval_payload.json  prometheus.yml  schema.sql
init/: main.py
langchain_test-gen-docs/: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  clear_dbs.py  test.env  test_db.py
langchain_test-gen-docs/deployment/k8s/chart/: Chart.yaml  values.yaml
langchain_test-gen-docs/deployment/standalone/: docker-compose.yml
langchain_test-gen-docs/extraction-service/: Dockerfile  main.py  pyproject.toml
langchain_test-gen-docs/prompts/v1/: rtm.md  test_strategy.md
langchain_test-gen-docs/scripts/: database.py  encrypt_secrets.py  evaluation.py  ingestion.py  llm_factory.py  metrics.py  retrieval.py
langflow-agents/contract-validator/: README.md  cli.py  langflow_component.py  validator.py  verify.py
langflow-agents/contract-validator/test_data/: all_payloads.jsonl  report.md  user_schema.json
langflow-agents/contract-validator/test_data/payloads/: payload_invalid_01.json  payload_invalid_02.json  payload_invalid_03.json  payload_invalid_04.json  (+146 more)
langflow-qa-agents/: Bug_Triage_Agent.json  Flaky_Test_Case_generator.json  JSON-Schema-Validator.json  RCA-Bot.json  README.md  Test-Case-Generator.json  Test-Plan-Creator.json
prompts/v1/: automation_recommendations.md  estimation_report.md  risk_matrix.md  test_cases.md  test_data_matrix.md  test_plan.md
scripts/: config.py  logger.py  rate_limiter.py
(+5 files in other folders)
