[tool.poetry]
name = "extraction-service"
version = "0.1.0"
description = "FastAPI extraction service using Docling and Unstructured"
authors = ["AI <ai@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = ">=0.34.0,<1.0.0"
python-multipart = ">=0.0.18,<1.0.0"
pandas = ">=2.2.3,<3.0.0"
openpyxl = ">=3.1.5,<4.0.0"
docling = ">=2.31.0,<3.0.0"
unstructured = ">=0.16.0,<1.0.0"
tabulate = ">=0.9.0,<1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
